RMagick 1.12.1
    o Change extension filename to match RubyGems 0.9.0 expectations.
    o Update the Draw#annotate documentation
    o Added transform, transpose methods to Image class (available with
      ImageMagick 6.2.8)

RMagick 1.12.0
    o Fix bug #4630, the new signature for #level is incompatible with
      releases prior to 1.10.1 (bug report from Al Evans)

RMagick 1.11.1
    o Fix bug #4511, add Makefile, rmagick_config.h as dependencies
      in the Makefile (bug report from Eric Hodel)
    o Ensure ExceptionInfo structures are freed

RMagick 1.11.0
    o Feature #3705, add resize_to_fit (thanks to Robert Manni for the code)
    o Added optimize_layers method to the ImageList class (available with
      ImageMagick 6.2.6)
    o Added limit_resource method to the Magick module
    o Replaced install.rb with setup.rb, improved gem install
      (bug report from Ryan Davis)
    o Added --disable-htmldoc option to setup.rb
    o Fix bug #4104, incorrect label on example (reported by Jason Lee)
    o Added contrast_stretch_channel to the Image class (available with
      ImageMagick 6.2.6)
    o Improved Magick exception handling to eliminate memory leaks when an exception
      is rescued and execution continues.
    o Tested with ImageMagick 6.2.7

RMagick 1.10.1
    o Fix bug #3437, memory leak in ImageList#to_blob
    o Fix bug #3363, Image#composite doesn't work when the source image
      is bigger than the destination
    o Fix bug #3635, Image#import_pixels doesn't accept FloatPixel or DoublePixel
      storage types
    o Feature #3597, add border_color attribute to the Draw class

RMagick 1.10.0
    o Added add_noise_channel method to Image class (available with ImageMagick 6.2.5)
    o Added vignette method to the Image class (available with ImageMagick 6.2.6)
    o Added crop_resize method to the Image class (thanks to Jerret Taylor for
      the suggestion and original code)
    o Added export_pixels_to_str method to the Image class